--- a/VirtualWorkout/app/src/main/res/values/strings.xml
+++ b/VirtualWorkout/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AgoraHouseparty</string>
+    <string name="app_name">testApp</string>
     <string name="agora_app_id">fbfcfb09e23d41d787a776d8fc78a7fe</string>
 
     <string name="account_cannot_be_yourself">Account can not be yourself</string>
