--- a/VirtualWorkoutV2/app/src/main/res/values/strings.xml
+++ b/VirtualWorkoutV2/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="password_hint">Password</string>
     <string name="create_lobby_button">Create Lobby</string>
     <string name="find_lobby_button">Find lobby</string>
+    <string name="create_lobby_title">Choose a workout</string>
 
     <string name="open">Open</string>
     <string name="close">Close</string>
