--- a/VirtualWorkoutV2/app/src/main/res/values/strings.xml
+++ b/VirtualWorkoutV2/app/src/main/res/values/strings.xml
@@ -8,6 +8,27 @@
     <string name="find_lobby_button">Find lobby</string>
     <string name="create_lobby_title">Choose a workout</string>
 
+    <!-- Button Strings -->
+    <string name="cardio_button_1">Cardio Level 1</string>
+    <string name="cardio_button_2">Cardio Level 2</string>
+    <string name="cardio_button_3">Cardio Level 3</string>
+    <string name="cardio_button_4">Cardio Level 4</string>
+
+    <string name="strength_button_1">Strength Level 1</string>
+    <string name="strength_button_2">Strength Level 2</string>
+    <string name="strength_button_3">Strength Level 3</string>
+    <string name="strength_button_4">Strength Level 4</string>
+
+    <string name="blitz_button_1">Blitz Level 1</string>
+    <string name="blitz_button_2">Blitz Level 2</string>
+    <string name="blitz_button_3">Blitz Level 3</string>
+    <string name="blitz_button_4">Blitz Level 4</string>
+
+    <string name="fat_burn_button_1">Fat Burn Level 1</string>
+    <string name="fat_burn_button_2">Fat Burn Level 2</string>
+    <string name="fat_burn_button_3">Fat Burn Level 3</string>
+    <string name="fat_burn_button_4">Fat Burn Level 4</string>
+
     <string name="open">Open</string>
     <string name="close">Close</string>
 </resources>
