Profile design rework

--- a/VirtualWorkoutV2/app/src/main/res/values/strings.xml
+++ b/VirtualWorkoutV2/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="open">Open</string>
     <string name="close">Close</string>
 
+    <string name="username">User1</string>
    <!-- AGORA -->
 
     <string name="label_settings">Settings</string>
