Profile, friends and main menu fully complete

--- a/VirtualWorkoutV2/app/src/main/res/values/strings.xml
+++ b/VirtualWorkoutV2/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="find_lobby_button">Find lobby</string>
     <string name="create_lobby_title">Choose a workout</string>
     <string name="badges">Achievements</string>
+    <string name="FriendActivity">Placeholder</string>
 
     <!-- Button Strings -->
     <string name="button_1">Level 1</string>
