--- a/VirtualWorkoutV2/app/src/main/res/values/strings.xml
+++ b/VirtualWorkoutV2/app/src/main/res/values/strings.xml
@@ -24,8 +24,10 @@
 
     <string name="username">User1</string>
 
-    <string name="congrats">Congrats, you have completed the exercise!</string>
+
     <!-- Workout strings -->
+    <string name="congrats">Well done, you have completed the exercise!</string>
+    <string name="end">Congrats, you have finally finished the workout!</string>
     <string name="workout_starts">Workout starting in</string>
     <string name="place_phone">Please place phone in an upright position</string>
     <string name="next_up">Next up:</string>
