--- a/VirtualWorkoutV2/app/src/main/res/values/strings.xml
+++ b/VirtualWorkoutV2/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="workout_starts">Workout starting in</string>
     <string name="place_phone">Please place phone in an upright position</string>
     <string name="next_up">Next up:</string>
+    <string name="You_got">You got:</string>
 
     <!-- AGORA -->
 
